[gd_scene load_steps=2 format=3 uid="uid://hub_scene"]

[ext_resource type="Script" path="res://scripts/hub.gd" id="1_hub"]

[node name="Hub" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_hub")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.15, 1.0)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 0.0
offset_top = 20.0
offset_right = 1280.0
offset_bottom = 60.0
text = "Night Cathedral â€” Hub"
horizontal_alignment = 1

[node name="AlignmentBar" type="HBoxContainer" parent="."]
layout_mode = 1
offset_left = 440.0
offset_top = 70.0
offset_right = 840.0
offset_bottom = 100.0

[node name="AlignmentLabel" type="Label" parent="AlignmentBar"]
text = "Alignment: Neutral (0)"
size_flags_horizontal = 3

[node name="MainLayout" type="HBoxContainer" parent="."]
layout_mode = 1
offset_left = 20.0
offset_top = 110.0
offset_right = 1260.0
offset_bottom = 680.0

[node name="RosterPanel" type="VBoxContainer" parent="MainLayout"]
size_flags_horizontal = 3

[node name="RosterTitle" type="Label" parent="MainLayout/RosterPanel"]
text = "Demon Roster"
horizontal_alignment = 1

[node name="RosterList" type="ItemList" parent="MainLayout/RosterPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="FusionPanel" type="VBoxContainer" parent="MainLayout"]
size_flags_horizontal = 3

[node name="FusionTitle" type="Label" parent="MainLayout/FusionPanel"]
text = "Fusion Chamber"
horizontal_alignment = 1

[node name="FusionPointsLabel" type="Label" parent="MainLayout/FusionPanel"]
text = "Fusion Points: 0"
horizontal_alignment = 1

[node name="DemonALabel" type="Label" parent="MainLayout/FusionPanel"]
text = "Demon A: (none)"

[node name="SelectDemonAButton" type="Button" parent="MainLayout/FusionPanel"]
text = "Select Demon A"

[node name="DemonBLabel" type="Label" parent="MainLayout/FusionPanel"]
text = "Demon B: (none)"

[node name="SelectDemonBButton" type="Button" parent="MainLayout/FusionPanel"]
text = "Select Demon B"

[node name="FuseButton" type="Button" parent="MainLayout/FusionPanel"]
text = "FUSE"
disabled = true

[node name="FusionResultLabel" type="Label" parent="MainLayout/FusionPanel"]
text = ""
horizontal_alignment = 1
autowrap_mode = 3

[node name="RunButton" type="Button" parent="."]
layout_mode = 1
offset_left = 540.0
offset_top = 690.0
offset_right = 740.0
offset_bottom = 730.0
text = "Start Run"

[node name="FusionSelectionDialog" type="AcceptDialog" parent="."]
title = "Select Demon"
size = Vector2i(400, 300)
visible = false

[node name="FusionDemonList" type="ItemList" parent="FusionSelectionDialog"]
layout_mode = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 392.0
offset_bottom = 250.0
